add new colors to box

--- a/lib/src/components/box/box.css
+++ b/lib/src/components/box/box.css
@@ -22,16 +22,18 @@
   transform: translateY(0);
 }
 
-@each $i in primary, secondary, success, danger, ui-light, ui-lighter,
-  ui-lightest, ui-dark, white, black
+@each $i in primary, primary-light, primary-dark, secondary, secondary-light,
+  secondary-dark, success, danger, ui-light, ui-lighter, ui-lightest, ui-dark,
+  white, black
 {
   :host([bg="$(i)"]) {
     background-color: var(--core-color-$(i));
   }
 }
 
-@each $i in primary, secondary, success, danger, ui-light, ui-lighter,
-  ui-lightest, ui-dark, white, black
+@each $i in primary, primary-light, primary-dark, secondary, secondary-light,
+  secondary-dark, success, danger, ui-light, ui-lighter, ui-lightest, ui-dark,
+  white, black
 {
   :host([border="$(i)"]) {
     border: 1px solid var(--core-color-$(i));
