--- a/lib/src/components/modal/modal.css
+++ b/lib/src/components/modal/modal.css
@@ -36,7 +36,7 @@
 :host [part="backdrop"] {
   opacity: 0;
   transition: var(--core-modal-backdrop-transition);
-  overflow: visible;
+  overflow: hidden;
   z-index: 400;
   position: absolute;
   width: 100vw;
@@ -53,8 +53,8 @@
 }
 
 :host [part="box"] {
+  opacity: 0;
   position: relative;
-  margin: var(--core-space-sm);
   border-radius: var(--core-border-radius-sm);
   border: var(--core-modal-box-border);
   box-shadow: var(--core-modal-box-box-shadow);
@@ -74,6 +74,7 @@
 }
 
 :host([open]) [part="box"] {
+  opacity: 1;
   transform: translateY(0px);
 }
 
@@ -82,7 +83,7 @@
   display: block;
   position: sticky;
   z-index: 500;
-  background: var(--ab-color-white);
+  background: var(--core-color-white);
   left: 0;
   top: 0;
   width: 100%;
