--- a/lib/src/components/container/container.css
+++ b/lib/src/components/container/container.css
@@ -8,6 +8,10 @@
   margin: 0 auto;
 }
 
+:host([size="full"]) {
+  max-width: 100%;
+}
+
 @each $i in xs, sm, md, lg, xl {
   :host([size="$(i)"]) {
     max-width: var(--core-container-$(i));
