--- a/lib/src/components/flex/flex.css
+++ b/lib/src/components/flex/flex.css
@@ -7,6 +7,10 @@
   flex-wrap: wrap;
 }
 
+:host([full-height]) {
+  height: 100%;
+}
+
 :host([justify-content="between"]) {
   justify-content: space-between;
 }
