--- a/lib/src/themes/minimal.css
+++ b/lib/src/themes/minimal.css
@@ -3,12 +3,12 @@
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
   --core-color-primary-hue: 250;
-  --core-color-primary-light: hsl(var(--core-color-primary-hue), 100%, 90%);
+  --core-color-primary-light: hsl(var(--core-color-primary-hue), 100%, 65%);
   --core-color-primary: hsl(var(--core-color-primary-hue), 100%, 60%);
   --core-color-primary-dark: hsl(var(--core-color-primary-hue), 100%, 50%);
 
   --core-color-secondary-hue: 250;
-  --core-color-secondary-light: hsl(var(--core-color-secondary-hue), 100%, 95%);
+  --core-color-secondary-light: hsl(var(--core-color-secondary-hue), 100%, 97%);
   --core-color-secondary: hsl(var(--core-color-secondary-hue), 100%, 95%);
   --core-color-secondary-dark: hsl(var(--core-color-secondary-hue), 100%, 90%);
 
@@ -16,17 +16,18 @@
   --core-color-focus: var(--core-color-primary);
   --core-color-focus-dark: var(--core-color-primary-dark);
 
-  --core-color-success-hue: 94;
-  --core-color-success-light: hsl(var(--core-color-success-hue), 48%, 66%);
-  --core-color-success: hsl(var(--core-color-success-hue), 48%, 40%);
+  --core-color-success-hue: 130;
+  --core-color-success-light: hsl(var(--core-color-success-hue), 48%, 48%);
+  --core-color-success: hsl(var(--core-color-success-hue), 48%, 44%);
   --core-color-success-dark: hsl(var(--core-color-success-hue), 48%, 30%);
 
   --core-color-warning-hue: 46;
-  --core-color-warning-light: hsl(var(--core-color-warning-hue), 100%, 46%);
-  --core-color-warning: hsl(var(--core-color-warning-hue), 100%, 61%);
-  --core-color-warning-dark: hsl(var(--core-color-warning-hue), 100%, 51%);
+  --core-color-warning-light: hsl(var(--core-color-warning-hue), 70%, 68%);
+  --core-color-warning: hsl(var(--core-color-warning-hue), 70%, 61%);
+  --core-color-warning-dark: hsl(var(--core-color-warning-hue), 70%, 51%);
 
   --core-color-danger-hue: 349;
+  --core-color-danger-light: hsl(var(--core-color-danger-hue), 75%, 44%);
   --core-color-danger: hsl(var(--core-color-danger-hue), 75%, 40%);
   --core-color-danger-dark: hsl(var(--core-color-danger-hue), 75%, 30%);
 
@@ -47,6 +48,7 @@
   --core-color-black: hsl(var(--core-color-ui-hue), 0%, 0%);
 
   --core-container: 800px;
+  --core-container-xxs: 300px;
   --core-container-xs: 600px;
   --core-container-sm: 800px;
   --core-container-md: 1000px;
