updates, add overlay remove dropdown

--- a/lib/src/components/checkbox/checkbox.css
+++ b/lib/src/components/checkbox/checkbox.css
@@ -8,7 +8,7 @@
 }
 
 :host {
-  cursor: default;
+  cursor: pointer;
   outline: 0;
   vertical-align: middle;
   height: var(--core-checkbox-height);
