--- a/lib/src/components/tabs/tabs.css
+++ b/lib/src/components/tabs/tabs.css
@@ -1,12 +1,29 @@
 :host {
+  --core-tab-height: var(--core-size-md);
+}
+
+:host {
   display: inline-flex;
   align-items: center;
   overflow-x: scroll;
+  height: var(--core-tab-height);
 }
 
 :host([full]) {
   display: flex;
   width: 100%;
+}
+
+:host([size="sm"]) {
+  --core-tab-height: var(--core-size-sm);
+}
+
+:host([size="md"]) {
+  --core-tab-height: var(--core-size-md);
+}
+
+:host([size="lg"]) {
+  --core-tab-height: var(--core-size-lg);
 }
 
 :host([position="left"]) {
