--- a/lib/src/components/input/input.css
+++ b/lib/src/components/input/input.css
@@ -6,7 +6,7 @@
   --core-input-border-radius: none;
   --core-input-box-shadow: none;
   --core-input-placeholder-color: var(--core-color-font-light);
-  --core-input-font-size: var(--core-font-size-md);
+  --core-input-font-size: 16px;
 }
 
 :host {
@@ -73,7 +73,7 @@
   color: var(--core-color-font);
   background-color: var(--core-input-bg-color);
   width: 100%;
-  font-size: var(--core-font-size-md);
+  font-size: var(--core-input-font-size);
   border-radius: var(--core-input-border-radius);
   height: 100%;
   outline: 0;
