--- a/lib/src/components/list/list-item.css
+++ b/lib/src/components/list/list-item.css
@@ -5,18 +5,22 @@
   list-style: none;
   margin: 0;
   padding: 0;
-  min-height: var(--core-size-md);
+  min-height: var(--core-list-item-height);
   color: var(--core-color-font);
 }
 
-:host([selectable]:hover) {
-  background: var(--core-color-ui-lighter);
+:host([selectable]) {
+  cursor: pointer;
 }
 
-:host [part="content"] {
+[part="content"] {
   margin-left: var(--core-space-sm);
   margin-right: var(--core-space-sm);
   flex: 1;
+}
+
+[part="end"] {
+  display: flex;
 }
 
 ::slotted([slot="start"]) {
