no-margin attr and inline

--- a/lib/src/components/text/text.css
+++ b/lib/src/components/text/text.css
@@ -34,6 +34,11 @@
   display: inline-block;
 }
 
+:host([inline]) > *:first-child,
+:host([no-margin]) > *:first-child {
+  margin-bottom: 0;
+}
+
 :host([full]) {
   display: block;
   width: 100%;
